base/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: REPLACED_BY_OVERLAY.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
